<resources>
    <string name="app_name">SI - TAKESI</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_email">Enter Valid Email</string>
    <string name="error_message_email">Enter Email</string>
    <string name="error_message_password">Enter Password</string>
    <string name="error_message_organization">Enter Organization</string>
    <string name="error_message_bill">Enter Name of Bill</string>
    <string name="error_message_total_bill">Enter The Bill Amount</string>
    <string name="error_message_bills">Enter Bill</string>
    <string name="error_message_big">Only less than</string>
    <string name="error_message_zero">Can\'t be zero</string>
    <string name="error_message_amount">Enter Amount</string>
    <string name="error_message_report">Enter Report</string>
    <string name="error_message_referral">Enter Referral Organization</string>
    <string name="error_message_agency">Enter Agency</string>
    <string name="success_message">Success, please login</string>
    <string name="success_reset">An email has been sent to you with instructions on how to reset your password.</string>
    <string name="success_message_tagihan">Bills Successfully Added</string>
    <string name="success_message_laporan">Reports Successfully Added</string>
    <string name="success_join_message">Successfully Joined</string>
    <string name="already_join_message">Already Joined</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email">Wrong Email Address</string>
    <string name="error_invalid_email">Invalid email address please type a valid email address!</string>
    <string name="error_valid_password">Wrong Password</string>
    <string name="error_not_verified">Please First Verify, your email address</string>
    <string name="error_no_user">No user is registered with this email address!</string>
    <string name="full_app_name">Tagihan Keuangan Organisasi</string>
    <string name="hello">Hello, </string>
    <string name="search_organization">Search Organization</string>
    <string name="referral_organization">Referral Organization</string>
    <string name="create_organization">Create Organization</string>
    <string name="information">Information</string>
    <string name="organization_name">Organization Name</string>
    <string name="agency_name">Agency Name</string>
    <string name="referral_code">Referral Code</string>
    <string name="creating_account">Creating Account…</string>
    <string name="creating_organization">Creating Organization…</string>
    <string name="add">Add</string>
    <string name="add_bill">Adding Bill…</string>
    <string name="add_report">Adding Report…</string>
    <string name="recording_payment">Recording Payment…</string>
    <string name="settling_bill">Settling Bill…</string>
    <string name="searching_organization">Searching Organization…</string>
    <string name="auth">Authenticating…</string>
    <string name="reset">Resetting password…</string>
    <string name="referral_copied">Referral copied</string>
    <string name="copy_referral">Copy Referral</string>
    <string name="referral_generate">Please generate referral code first</string>
    <string name="tos">Terms of service</string>
    <string name="tos_sub">Read our application service terms</string>
    <string name="ok">OK</string>
    <string name="text_leader">(You as a leader)</string>
    <!-- #### Onboarding string resources #### -->
    <string name="onboarding_skip">SKIP</string>
    <string name="onboarding_got_it">GOT IT</string>
    <string name="onboarding_next">NEXT</string>
    <string-array name="onboarding_titles">
        <item>@string/app_name</item>
        <item>@string/onboarding_title_1</item>
        <item>@string/onboarding_title_2</item>
    </string-array>
    <string name="onboarding_title_1">Efficient</string>
    <string name="onboarding_title_2">Transparency</string>
    <string-array name="onboarding_descriptions">
        <item>@string/onboarding_descriptions_1</item>
        <item>@string/onboarding_descriptions_2</item>
        <item>@string/onboarding_descriptions_3</item>
    </string-array>
    <string name="onboarding_descriptions_1">It can facilitate the management of financial bills.</string>
    <string name="onboarding_descriptions_2">Provide an efficient financial management service and secure information storage.</string>
    <string name="onboarding_descriptions_3">It provides the organization\'s financial management transparency feature for members.</string>
    <string name="not_activated">not activated</string>
    <string name="setting">Setting</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="message_logout">Are you sure you want to logout?</string>
    <string name="message_feedback">Describe the issue you\'ve encountered *or* Tell us how you\'d like to improve *SI-TAKESI*</string>
    <string name="message_finish">Set bill done?</string>
    <string name="message_no_organization">No organization found, join now!</string>
    <string name="join">Join</string>
    <string name="join_organization">Join Organization</string>
    <string name="message_payment">Please make a payment to activate</string>
    <string name="message_complete">Has completed</string>
    <string name="how">How?</string>
    <string name="tab_bill">List of charges</string>
    <string name="tab_report">Reports</string>
    <string name="tab_make_bill">Make a bill</string>
    <string name="tab_make_report">Make a report</string>
    <string name="tab_select">Select treasurer</string>
    <string name="select">Select</string>
    <string name="deselect">Deselect</string>
    <string name="member">Member</string>
    <string name="leader">Leader</string>
    <string name="treasurer">Treasurer</string>
    <string name="status_change">Status changed</string>
    <string name="success">Successfully Added</string>
    <string name="success_update">Successfully updated billing status</string>
    <string name="failed">Failed to Add</string>
    <string name="status_message">Treasurer only : 2</string>
    <string name="pay_limit">payment limit</string>
    <string name="already_paid">Already paid off</string>
    <string name="not_paid">Not yet paid off</string>
    <string name="bill_name">Bill Name</string>
    <string name="billing_details">Billing Details</string>
    <string name="the_amount_of_the_bill">The Amount of The Bill</string>
    <string name="create_bill">Create Bill</string>
    <string name="create_report">Create Report</string>
    <string name="deadline_bill">Deadline Bill</string>
    <string name="xxxx_xx_xx">xxxx-xx-xx</string>
    <string name="rp">Rp.</string>
    <string name="detail_organization">Detail Organization</string>
    <string name="how_to_active">How to Active?</string>
    <string name="date_join">Join Date</string>
    <string name="date_active">Active Until</string>
    <string name="there_is_no_data">There is no data</string>
    <string name="unfinished">Unfinished</string>
    <string name="finished">Finished</string>
    <string name="connection_failed">Connection Failed!</string>
    <string name="no_connection">No Internet Connection!</string>
    <string name="record_payment">Click to Record payment</string>
    <string name="not_all_pay">Not all have paid</string>
    <string name="see_detail">Click to See Details</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="input">Input</string>
    <string name="report_details">Report Details</string>
    <string name="report">Reported</string>
    <string name="amount">Amount</string>
    <string name="name_report">Report Name</string>
    <string name="income">Income</string>
    <string name="spending">Spending</string>
    <string name="bill">Bill</string>
    <string name="total">Total</string>
    <string name="confirm_payment">Payment Confirmation</string>
    <string name="active_group"><![CDATA[For organization activation is charged <b>Rp.5000/month or Rp.50000/year</b>.<br><br>Payment of activation fees can be made via transfer to account number <b>2310283757 (BCA)</b> in the name of <b>Silmi Riyadlul Jannah</b>. Then confirm payment via chat whatsapp.<br><br>Only representatives of organizations make payments, do not need all members.]]></string>
    <string name="active_message">Hello I want to confirm payment for the SI-TAKESI application.%0A%0AMy Organization Referral Code is</string>
    <string name="finish">Finish</string>
    <string name="help">Help</string>
    <string name="help_sub">How to use the application?</string>
    <string name="about">About</string>
    <string name="about_sub">Know our application and team</string>
    <string name="account">Account</string>
    <string name="account_sub">Logout from your account</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_sub">Give us feedback for better</string>

    <string name="takesi_sub">Financial Mobile System for Organizations</string>
    <string name="takesi_version">Version 0.2.1</string>
    <string name="teacher_coordinators">Teacher Coordinators</string>
    <string name="dosen">- Taufik Ridwan, S.T, M.T\n- Syifaul Fuada, S. Pd, M.T\n- Rian Andrian, S.T, M.T</string>
    <string name="team_members">Team Members</string>
    <string name="team">- Robby Akbar\n- Agus Puji Prasetio\n- Gartika Dwi Jayanti\n- Silmi Riyadlul Jannah\n- Muhamad Irwan Ramadhan\n- Sadam Fauzi\n- Dimas Setiawan</string>
    <string name="zeecodeku_development_team">Zeecodeku Development Team</string>
    <string name="_4th_sea_creative_camp">4th sea creative camp</string>
    <string name="print_out">Print Out</string>
    <string name="forgot_password">Forgot password? Click here</string>
    <string name="back_to_login">Back to Login</string>
    <string name="reset_password">Reset Password</string>
</resources>
